# KnowledgeBase

./: .gitignore  AGENTS.md  PRODUCT.md  README.md  one-shot.sh
docs/: README.md
internal_kb_fullstack/backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
internal_kb_fullstack/backend/app/: main.py  worker_main.py
internal_kb_fullstack/backend/app/api/: deps.py
internal_kb_fullstack/backend/app/core/: config.py  logging.py  redirects.py  security.py  utils.py
internal_kb_fullstack/backend/app/db/: engine.py  migrator.py  models.py
internal_kb_fullstack/backend/app/schemas/: auth.py  connectors.py  documents.py  glossary.py  jobs.py  search.py  trust.py  workspace.py
internal_kb_fullstack/backend/docs/: architecture.md
internal_kb_fullstack/backend/evals/: sendy_glossary_eval.json
internal_kb_fullstack/backend/scripts/: backfill_missing_embeddings.py  backfill_source_urls.py  evaluate_glossary_quality.py  export_openapi.py  import_sample_corpus.py
internal_kb_fullstack/backend/tests/: test_admin_routes.py  test_auth_routes.py  test_chunker.py  test_config_security.py  test_connector_routes.py  test_db_engine.py  test_document_draft_route.py  test_document_drafts.py  test_document_routes.py  test_embeddings.py  test_glossary_routes.py  test_glossary_service.py  test_import_sample_corpus.py  test_ingest_glossary_refresh.py  test_ingest_slug_conflicts.py  test_jobs_service.py  test_memory_notes_frontmatter.py  test_search_sql.py  test_source_urls.py  test_wiki_graph.py  test_workspace_routes.py
(+202 files in other folders)
