[project]
name = "internal-kb-backend"
version = "0.1.0"
description = "Backend-first internal knowledge base with Postgres, pgvector, semantic search, and remote embeddings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.129,<0.130",
  "uvicorn[standard]>=0.30,<0.36",
  "sqlalchemy>=2.0,<2.2",
  "psycopg[binary]>=3.2,<3.4",
  "pgvector>=0.3.6,<1.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "openai>=1.99,<2.0",
  "httpx>=0.28,<1.0",
  "tiktoken>=0.9,<1.0",
  "markdown>=3.7,<4.0",
  "beautifulsoup4>=4.13,<5.0",
  "python-multipart>=0.0.20,<0.1",
  "orjson>=3.10,<4.0",
  "tenacity>=9.0,<10.0",
  "structlog>=24.4,<26.0",
  "cryptography>=44.0,<46.0",
  "pypdf>=5.4,<6.0",
  "python-docx>=1.1,<2.0",
  "openpyxl>=3.1,<4.0",
  "python-pptx>=1.0,<2.0",
  "pillow>=11.0,<12.0",
  "pytesseract>=0.3.13,<0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
